// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalViewHeader @renders should render the component: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <NormalViewHeader",
    "isLoading=false",
    "subtitle="Test sub title"",
    "toptitle="Test top title"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BMedia> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <NormalViewHeader",
    "isLoading=false",
    "subtitle="Test sub title"",
    "toptitle="Test top title"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BMedia",
    "key=0",
    "class="align-items-center"",
    "no-body=""",
    ">",
    "
",
    " at <NormalViewHeader",
    "isLoading=false",
    "subtitle="Test sub title"",
    "toptitle="Test top title"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BMediaBody",
    "class="align-self-center"",
    ">",
    "
",
    " at <BMedia",
    "key=0",
    "class="align-items-center"",
    "no-body=""",
    ">",
    "
",
    " at <NormalViewHeader",
    "isLoading=false",
    "subtitle="Test sub title"",
    "toptitle="Test top title"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`NormalViewHeader @renders should render the prop values with the provided profile image: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BImg",
    "key=0",
    "class="mr-4"",
    "width="104"",
    " ...",
    ">",
    "
",
    " at <BMedia",
    "key=0",
    "class="align-items-center"",
    "no-body=""",
    ">",
    "
",
    " at <NormalViewHeader",
    "isLoading=false",
    "subtitle="Test sub title"",
    "toptitle="Test top title"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
